# screenshotter

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  canvas.cpp  canvas.h  canvasviewer.cpp  canvasviewer.h  collectionmodel.cpp  collectionmodel.h  collectionscroller.cpp  collectionscroller.h  collectionviewer.cpp  collectionviewer.h  colourpicker.cpp  colourselector.cpp  colourselector.h  main.cpp  mainwindow.cpp  mainwindow.h  paletteretriever.cpp  paletteretriever.h  saver.cpp  screenshoteditor.cpp  screenshoteditor.h  treeviewdelegate.cpp  treeviewdelegate.h
src/app/: CMakeLists.txt  camera.h  canvasviewer.h  collectionmodel.cpp  collectionviewer.cpp  colourpicker.h  colourselector.cpp  colourselector.h  mainwindow.cpp  mainwindow.h  paletteretriever.cpp  paletteretriever.h  saver.h  screenshoteditor.cpp  screenshoteditor.h  treeviewdelegate.cpp
tests/: CMakeLists.txt  collectionmodeltest.cpp  mainwindowtest.cpp  tst_tests.cpp
tests/collectionmodel_test/: CMakeLists.txt  collectionmodel_test.cpp
